--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "browser-sync": "^2.13.0",
     "del": "^2.2.1",
     "gulp": "github:gulpjs/gulp#4.0",
+    "gulp-cheerio": "^0.6.2",
+    "gulp-concat": "^2.6.0",
+    "gulp-imagemin": "^3.0.3",
     "gulp-jade": "^1.1.0",
+    "gulp-replace": "^0.5.4",
     "gulp-sass": "^2.3.2",
+    "gulp-svg-sprite": "^1.3.5",
+    "gulp-svgmin": "^1.2.2",
     "gulp-watch": "^4.3.8"
   },
   "scripts": {
